--- a/hours/templates/hours/index.html
+++ b/hours/templates/hours/index.html
@@ -1,2 +1,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<h1>This is the index page.</h1>
+<h3>Please select if you are a doctor, volunteer, or would like to see the schedule</h3>
+<div class="d-grid gap-2" style="width: 500px;">
+    <button class="btn btn-primary" type="button">I'm a doctor</button>
+    <button class="btn btn-primary" type="button">I'm a patient</button>
+    <button class="btn btn-primary" type="button">See schedule</button>
+  </div>
