--- a/hours/templates/hours/doctor.html
+++ b/hours/templates/hours/doctor.html
@@ -1,6 +1,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <h3>Please provide name of department</h3>
-<input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
+<form action="" method="post">
+  {% csrf_token %}
+  {{ form }}
+  <input class="btn btn-primary" type="submit" value="Submit">
+</form>
+
 
 <h3>Departments</h3>
 <div class="card" style="width: 18rem; height: 80px;">
